  the REPL is running are correctly handled.
  (Xavier Leroy, report by Github user quakerquickoats, review by
   Jeremie Dimino)

- #10147, #10148: Fix building runtime with GCC on macOS.
  (David Allsopp, report by John Skaller)

- #10166: Fix illegal permutation error reporting in module aliases.
  (Matthew Ryan, review by Florian Angeletti)

OCaml 4.12.0
------------

### Language features:

- #1655: pattern aliases do not ignore type constraints
  (Thomas Refis, review by Jacques Garrigue and Gabriel Scherer)

* #9500, #9727, #9866, #9870, #9873: Injectivity annotations
  One can now mark type parameters as injective, which is useful for
  abstract types:
    module Vec : sig type !'a t end = struct type 'a t = 'a array end
  On non-abstract types, this can be used to check the injectivity of
  parameters. Since all parameters of record and sum types are by definition
  injective, this only makes sense for type abbreviations:
    type !'a t = 'a list
  Note that this change required making the regularity check stricter.
  (Jacques Garrigue, review by Jeremy Yallop and Leo White)

- #9429: Add unary operators containing `#` to the parser for use in ppx
  rewriters
  (Leo White, review by Damien Doligez)

### Supported platforms:

- #9699: add support for iOS and macOS on ARM 64 bits
  (GitHub user @EduardoRFS, review by Xavier Leroy, Nicolás Ojeda Bär
   and Anil Madhavapeddy, additional testing by Michael Schmidt)

### Type system:

* #9811: remove propagation from previous branches
  Type information inferred from previous branches was propagated in
  non-principal mode. Revert this for better compatibility with
  -principal mode.
  For the time being, infringing code should result in a principality warning.
  (Jacques Garrigue, review by Thomas Refis and Gabriel Scherer)

### Runtime system:

- #2195: Improve error message in bytecode stack trace printing and load
  debug information during bytecode startup if OCAMLRUNPARAM=b=2.