@@ -1939,8 +1939,9 @@ let rec unify_univar t1 t2 = function
   | [] -> raise (Unify [])
 
 (* Test the occurrence of free univars in a type *)
-(* that's way too expensive. Must do some kind of caching *)
-let occur_univar env ty =
+(* If [inj_only=true], only check injective positions *)
+(* That's way too expensive. Must do some kind of caching *)
+let occur_univar ?(inj_only=false) env ty =
   let visited = ref TypeMap.empty in
   let rec occur_rec bound ty =
     let ty = repr ty in
@@ -1949,7 +1950,7 @@ let occur_univar env ty =
         (flip_mark_node ty; occur_desc bound ty)
       else try
         let bound' = TypeMap.find ty !visited in
-        if TypeSet.exists (fun x -> not (TypeSet.mem x bound)) bound' then begin
+        if not (TypeSet.subset bound' bound) then begin
           visited := TypeMap.add ty (TypeSet.inter bound bound') !visited;
           occur_desc bound ty
         end
@@ -1977,10 +1978,11 @@ let occur_univar env ty =
                    in this position. Physical expansion, as done in `occur`,
                    would be costly here, since we need to check inside
                    object and variant types too. *)
-                if not Variance.(eq v null) then occur_rec bound t)
+                if Variance.(if inj_only then mem Inj v else not (eq v null))
+                then occur_rec bound t)
               tl td.type_variance
           with Not_found ->
-            List.iter (occur_rec bound) tl
+            if not inj_only then List.iter (occur_rec bound) tl
           end
       | _ -> iter_type_expr (occur_rec bound) ty
   in
@@ -1988,6 +1990,11 @@ let occur_univar env ty =
       occur_rec TypeSet.empty ty
     )
     ~always:(fun () -> unmark_type ty)
+
+let has_free_univars env ty =
+  try occur_univar ~inj_only:false env ty; false with Unify _ -> true
+let has_injective_univars env ty =
+  try occur_univar ~inj_only:true env ty; false with Unify _ -> true
 
 (* Grouping univars by families according to their binders *)
 let add_univars =
@@ -2265,6 +2272,10 @@ let rec mcomp type_pairs env t1 t2 =
             mcomp_list type_pairs env tl1 tl2
         | (Tconstr (p1, tl1, _), Tconstr (p2, tl2, _)) ->
             mcomp_type_decl type_pairs env p1 p2 tl1 tl2
+        | (Tconstr (_, [], _), _) when has_injective_univars env t2' ->
+            raise (Unify [])
+        | (_, Tconstr (_, [], _)) when has_injective_univars env t1' ->
+            raise (Unify [])
         | (Tconstr (p, _, _), _) | (_, Tconstr (p, _, _)) ->
             begin try
               let decl = Env.find_type p env in
@@ -2442,7 +2453,9 @@ let find_expansion_scope env path =
 let add_gadt_equation env source destination =
   (* Format.eprintf "@[add_gadt_equation %s %a@]@."
     (Path.name source) !Btype.print_raw destination; *)
-  if local_non_recursive_abbrev !env source destination then begin
+  if has_free_univars !env destination then
+    occur_univar ~inj_only:true !env destination
+  else if local_non_recursive_abbrev !env source destination then begin
     let destination = duplicate_type destination in
     let expansion_scope =
       max (Path.scope source) (get_gadt_equations_level ())
@@ -2571,6 +2584,20 @@ let record_equation t1 t2 =
   | Forbidden -> assert false
   | Allowed { equated_types } -> TypePairs.add equated_types (t1, t2) ()
 
+(* Called from unify3 *)
+let unify3_var env t1' t2 t2' =
+  occur !env t1' t2;
+  try
+    occur_univar !env t2;
+    link_type t1' t2;
+  with Unify _ when !umode = Pattern ->
+    reify env t1';
+    reify env t2';
+    if can_generate_equations () then begin
+      occur_univar ~inj_only:true !env t2';
+      record_equation t1' t2';
+    end
+
 (*
    1. When unifying two non-abbreviated types, one type is made a link
       to the other. When unifying an abbreviated type with a
@@ -2611,9 +2638,15 @@ let rec unify (env:Env.t ref) t1 t2 =
     | (Tconstr _, Tvar _) when deep_occur t2 t1 ->
         unify2 env t1 t2
     | (Tvar _, _) ->
-        unify1_var !env t1 t2
+        if !umode = Pattern && has_free_univars !env t2 then
+          unify2 env t1 t2
+        else
+          unify1_var !env t1 t2
     | (_, Tvar _) ->
-        unify1_var !env t2 t1
+        if !umode = Pattern && has_free_univars !env t1 then
+          unify2 env t1 t2
+        else
+          unify1_var !env t2 t1
     | (Tunivar _, Tunivar _) ->
         unify_univar t1 t2 !univar_pairs;
         update_level !env t1.level t2;
@@ -2691,13 +2724,9 @@ and unify3 env t1 t1' t2 t2' =
       unify_univar t1' t2' !univar_pairs;
       link_type t1' t2'
   | (Tvar _, _) ->
-      occur !env t1' t2;
-      occur_univar !env t2;
-      link_type t1' t2;
+      unify3_var env t1' t2 t2'
   | (_, Tvar _) ->
-      occur !env t2' t1;
-      occur_univar !env t1;
-      link_type t2' t1;
+      unify3_var env t2' t1 t1'
   | (Tfield _, Tfield _) -> (* special case for GADTs *)
       unify_fields env t1' t2'
   | _ ->
@@ -3060,11 +3089,8 @@ and unify_row_field env fixed1 fixed2 rm1 rm2 l f1 f2 =
       in
       let tl1' = remq tl2 tl1 and tl2' = remq tl1 tl2 in
       (* PR#6744 *)
-      let split_univars =
-        List.partition
-          (fun ty -> try occur_univar !env ty; true with Unify _ -> false) in
-      let (tl1',tlu1) = split_univars tl1'
-      and (tl2',tlu2) = split_univars tl2' in
+      let (tlu1,tl1') = List.partition (has_free_univars !env) tl1'
+      and (tlu2,tl2') = List.partition (has_free_univars !env) tl2' in
       begin match tlu1, tlu2 with
         [], [] -> ()
       | (tu1::tlu1), _ :: _ ->
