@@ -181,6 +181,9 @@ Working version
 - #10166: Fix illegal permutation error reporting in module aliases.
   (Matthew Ryan, review by Florian Angeletti)
 
+- #10189: Universal variables leaking through GADT equations
+  (Jacques Garrigue, report by Leo White)
+
 OCaml 4.12.0
 ------------
 
